scale-testing/example-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nameReplace
  namespace: nsReplace
spec:
  podSelector:
    matchLabels:
      app: labelReplace1
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: labelReplace2
    ports:
    - protocol: TCP
      port: 6379
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: labelReplace3
    ports:
    - protocol: TCP
      port: 5978
